--- a/content/elasticsearch/envoy-zipkin-provider/envoy-2.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/envoy-2.yaml
@@ -24,7 +24,7 @@ static_resources:
               name: envoy.tracers.zipkin
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
-                collector_cluster: jaeger
+                collector_cluster: jaeger-collector
                 collector_endpoint: "/api/v2/spans"
                 collector_endpoint_version: HTTP_JSON
           codec_type: AUTO
@@ -95,15 +95,15 @@ static_resources:
   #             socket_address:
   #               address: zipkin
   #               port_value: 9411
-  - name: jaeger
+  - name: jaeger-collector
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     load_assignment:
-      cluster_name: jaeger
+      cluster_name: jaeger-collector
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: jaeger
-                port_value: 9412
+                address: jaeger-collector
+                port_value: 9411
