--- a/content/elasticsearch/envoy-zipkin-provider/envoy-front-proxy.yaml
+++ b/content/elasticsearch/envoy-zipkin-provider/envoy-front-proxy.yaml
@@ -28,7 +28,7 @@ static_resources:
               name: envoy.tracers.zipkin
               typed_config:
                 "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
-                collector_cluster: jaeger
+                collector_cluster: jaeger-collector
                 collector_endpoint: "/api/v2/spans"
                 collector_endpoint_version: HTTP_JSON
           codec_type: AUTO
@@ -97,6 +97,7 @@ static_resources:
               socket_address:
                 address: envoy-1
                 port_value: 10000
+
   - name: envoy_cluster2
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
@@ -122,15 +123,15 @@ static_resources:
   #               address: zipkin
   #               port_value: 9411
 
-  - name: jaeger
+  - name: jaeger-collector
     type: STRICT_DNS
     lb_policy: ROUND_ROBIN
     load_assignment:
-      cluster_name: jaeger
+      cluster_name: jaeger-collector
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: jaeger
-                port_value: 9412
+                address: jaeger-collector
+                port_value: 9411
