--- a/content/elasticsearch/envoy-otel-provider/envoy-1.yaml
+++ b/content/elasticsearch/envoy-otel-provider/envoy-1.yaml
@@ -79,7 +79,7 @@ static_resources:
       socket_address:
         address: 0.0.0.0
         port_value: 10001
-    traffic_direction: INBOUND
+    traffic_direction: OUTBOUND
     filter_chains:
     - filters:
       - name: envoy.filters.network.http_connection_manager
